# function-calling-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
datasets/: core.jsonl
docs/: index.html
docs/reports/: deepseek.html  mimo.html
scripts/: generate_dataset.py
src/fc_eval/: __init__.py  __main__.py  adapters.py  cli.py  dataset.py  evaluator.py  judge.py  models.py  report.py  run.py  tools.py
tests/: test_adapters.py  test_cli.py  test_dataset_models.py  test_evaluator.py  test_run_report.py  test_tools.py
