[project]
name = "function-calling-eval-harness"
version = "0.1.0"
description = "A reproducible evaluation harness for function calling and tool-use agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "jinja2>=3.1.4",
  "openai>=1.60.0",
  "pydantic>=2.10.0",
  "typer>=0.15.0",
]

[project.scripts]
fc-eval = "fc_eval.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fc_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fc_eval --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]
